# effective-giggle

./: .env.example  .gitignore  README.md  main.py  pipeline_agents.py  pyproject.toml
.windsurf/rules/: agent-development.md
.windsurf/workflows/: push-to-github.md
docs/: getting_started.md  project-brief.md
effective_giggle/: __init__.py
effective_giggle/agents/: __init__.py
effective_giggle/agents/researcher/: agent.py
effective_giggle/agents/topic_selector/: __init__.py  agent.py
effective_giggle/core/: __init__.py  base_agent.py  settings.py
effective_giggle/mcp_server/: __init__.py  client.py  launcher.py  server.py
effective_giggle/mcp_server/schemas/: __init__.py
effective_giggle/mcp_server/tools/: __init__.py  notion_tools.py  search_tools.py
effective_giggle/tools/: notion_db.py
tests/: test_env.py  test_mcp_integration.py
